--- a/style.css
+++ b/style.css
@@ -159,3 +159,75 @@
     font-size: 18px;
   }
   /* // end of message */
+
+  /*--- MODAL STYLES ---*/
+#special-offer{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+    
+  .close-button{
+    text-decoration: none;
+    color: #F2DFD5;
+    font-size: 2.5rem;
+    font-weight: bold;
+    position: relative;
+    left: 20rem;
+  }
+  
+  .close-button:hover {
+    cursor: pointer;
+    color: black;
+  }
+  
+  #offer-content{
+    background: rgb(44, 44, 44);
+      color: white;
+      margin: auto;
+      margin-top: 6rem;
+      text-align: justify;
+      border: 1px solid black;
+      border-radius: 6px;
+      padding: 1rem 2rem;
+      width: 50rem;
+      z-index: 999;
+      box-shadow: 3px 3px 12px black;
+  }
+  
+    #offer-content > h3{
+      font-family: $logo-cursive;
+      font-size: 3rem;
+      position: relative;
+      bottom: 23px;
+    }
+  
+    #offer-content > p{
+      font-family: $main-text-font;
+      position: relative;
+      bottom: 16px;
+    }
+  
+    #signup-btn{
+      background: #F2DFD5;
+      color: #3B4B59;
+      font-family: $main-text-font;
+      width: 100%;
+      padding: 3px 5px;
+      border-radius: 3px;
+      border: none;
+    }
+  
+    #signup-btn:hover{
+      background-color: white;
+      font-weight: bold;
+    }
+  
